@@ -137,6 +137,7 @@ PARSE_ADD_ARGS_EXAMPLES = [
             start=parse("1985-05-25 15:34:00"),
             end=None,
             tags=[],
+            full_days=False,
         ),
         id="no args",
     ),
@@ -147,6 +148,7 @@ PARSE_ADD_ARGS_EXAMPLES = [
             start=parse("1985-05-25"),
             end=parse("1985-05-26"),
             tags=[],
+            full_days=True,
         ),
         id="no args, prefer full days",
     ),
@@ -157,6 +159,7 @@ PARSE_ADD_ARGS_EXAMPLES = [
             start=parse("1985-05-23"),
             end=parse("1985-05-25"),
             tags=[],
+            full_days=True,
         ),
         id="no args, prefer full days",
     ),
@@ -167,6 +170,7 @@ PARSE_ADD_ARGS_EXAMPLES = [
             start=parse("1985-05-23 07:00:00"),
             end=parse("1985-05-23 19:00:00"),
             tags=[],
+            full_days=False,
         ),
         id="two days in the past",
     ),
@@ -177,6 +181,7 @@ PARSE_ADD_ARGS_EXAMPLES = [
             start=parse("1985-05-23 07:00:00"),
             end=parse("1985-05-23 11:00:00"),
             tags=[],
+            full_days=False,
         ),
         id="two days in the past, with delta",
     ),
@@ -187,6 +192,7 @@ PARSE_ADD_ARGS_EXAMPLES = [
             start=parse("1985-05-25"),
             end=parse("1985-05-26"),
             tags=[default_report_settings.holiday_tag],
+            full_days=True,
         ),
         id="no args, holiday",
     ),
@@ -197,6 +203,7 @@ PARSE_ADD_ARGS_EXAMPLES = [
             start=parse("1985-05-25"),
             end=parse("1985-05-26"),
             tags=[default_report_settings.holiday_tag],
+            full_days=True,
         ),
         id="@holiday, with holiday=True",
     ),
@@ -207,6 +214,7 @@ PARSE_ADD_ARGS_EXAMPLES = [
             start=parse("1985-05-25"),
             end=parse("1985-05-26"),
             tags=[default_report_settings.holiday_tag],
+            full_days=True,
         ),
         id="no args, @holiday",
     ),
@@ -217,6 +225,7 @@ PARSE_ADD_ARGS_EXAMPLES = [
             start=parse("1985-05-01"),
             end=parse("1985-05-02"),
             tags=[default_report_settings.holiday_tag],
+            full_days=True,
         ),
         id="past date, @holiday",
     ),
